data/derived/comb/progs/unify/prog5988.ml.out
Characters 31-38:
  let _ = emitGrayscale (eval_fn (g1 ()), 150, "sample");;
                                 ^^^^^^^
Error: This expression has type int * int * int
       but an expression was expected of type expr
